--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "hypervault",
   "private": true,
   "dependencies": {
-    "crypto.js": "~3.1.2-1",
-    "FileSaver": "*"
+    "FileSaver": "*",
+    "cryptojslib": "~3.1.2"
   }
 }
