Got triplesec integrated and working. It appears to be fast enough to be useable. I think this is probably the crypto library to go forward with.

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "private": true,
   "dependencies": {
     "FileSaver": "*",
-    "sjcl": "~1.0.0"
+    "triplesec": "https://github.com/keybase/triplesec.git#~3.0.19"
   }
 }
