--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-newer": "^0.7.0",
     "grunt-rev": "^0.1.0",
     "grunt-svgmin": "^0.4.0",
+    "grunt-text-replace": "^0.4.0",
     "grunt-usemin": "^2.3.0",
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.4.0",
