--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-inline": "^0.3.2",
     "grunt-mocha": "^0.4.10",
     "grunt-newer": "^0.7.0",
     "grunt-rev": "^0.1.0",
